--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "cors": "^2.8.5",
+    "mongoose": "^8.3.2",
+    "next": "14.2.3",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-fontawesome": "^1.7.1"
   },
   "devDependencies": {
     "postcss": "^8",
